Fix bug 463273 - Error: Failed to read 'repeatDetailsOrdinal0' from chrome://calendar/locale/calendar-event-dialog.properties

--- a/fr/calendar/chrome/calendar/calendar-event-dialog.properties
+++ b/fr/calendar/chrome/calendar/calendar-event-dialog.properties
@@ -37,91 +37,61 @@
 #
 # ***** END LICENSE BLOCK *****
 
-repeatDetailsRuleDaily1=chaque jour
-repeatDetailsRuleDaily2=un jour sur deux
 # LOCALIZATION NOTE (repeatDetailsRuleDaily3):
 # Edit recurrence window -> Recurrence pattern -> Daily repeat rules
-# %1$S - number
+# #1 - number
 # e.g. "every 4 days"
-repeatDetailsRuleDaily3=tous les %1$S jours
+dailyEveryNth=tous les jours;tous les #1 jours
 repeatDetailsRuleDaily4=chaque jour ouvré
 
-# LOCALIZATION NOTE (repeatDetailsRuleWeekly1):
+# LOCALIZATION NOTE (weeklyNthOn)
 # Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
 # %1$S - weekday (one or more)
-# e.g. "every Sunday and Monday"
-repeatDetailsRuleWeekly1=chaque %1$S
-# LOCALIZATION NOTE (repeatDetailsRuleWeekly2):
-# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
-# %1$S - weekday (one or more)
-# e.g. "every other week on Sunday, Monday and Friday"
-repeatDetailsRuleWeekly2=une semaine sur deux le %1$S
-# LOCALIZATION NOTE (repeatDetailsRuleWeekly3):
-# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
-# %1$S - number
-# %2$S - weekday (one or more)
-# e.g. "every 3 weeks on Friday"
-repeatDetailsRuleWeekly3=toutes les %1$S semaines le %2$S
-repeatDetailsRuleWeekly4=chaque semaine
-repeatDetailsRuleWeekly5=une semaine sur deux
-# LOCALIZATION NOTE (repeatDetailsRuleWeekly6):
-# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
-# %1$S - number
-# e.g. "every 2 weeks"
-repeatDetailsRuleWeekly6=une semaine sur %1$S
+# #2 - week interval
+# e.g. "every 3 weeks on Tuesday, Wednesday and Thursday
+weeklyNthOn=chaque %1$S;toutes les #2 semaines le %1$S
 
-repeatDetailsDay1=dimanche
-repeatDetailsDay2=lundi
-repeatDetailsDay3=mardi
-repeatDetailsDay4=mercredi
-repeatDetailsDay5=jeudi
-repeatDetailsDay6=vendredi
-repeatDetailsDay7=samedi
+# LOCALIZATION NOTE (weeklyNthOn)
+# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
+# #1 - interval
+# e.g. "every 5 weeks"
+weeklyEveryNth=chaque semaine;toutes les #1 semaines
 
+# LOCALIZATION NOTE (repeatDetailsAnd)
+# Used to show a number of weekdays in a list
+# i.e. "Sunday, Monday, Tuesday " + and + " Wednesday"
+# XXX Please file a bug if this makes it hard to localize the list.
 repeatDetailsAnd=et
 
-# LOCALIZATION NOTE (repeatDetailsRuleMonthly):
+# LOCALIZATION NOTE (monthlyNthOfEvery):
 # Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
 # %1$S - ordinal
 # %2$S - weekday
-# e.g. "the first monday of every month"
-repeatDetailsRuleMonthly=le %1$S %2$S de chaque mois
-# LOCALIZATION NOTE (repeatDetailsRuleMonthly2):
+# #3 - interval
+# i.e. "the FIRST MONDAY of every 3 months"
+monthlyNthOfEvery=le %1$S %2$S de chaque mois;tous les #3 mois le %1$S %2$S
+
+# LOCALIZATION NOTE (monthlyEveryOfEvery):
 # Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
-# %1$S - ordinal
-# %2$S - weekday
-# e.g. "the first monday of every other month"
-repeatDetailsRuleMonthly2=le %1$S %2$S un mois sur deux
-# LOCALIZATION NOTE (repeatDetailsRuleMonthly3):
-# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
-# %1$S - ordinal
-# %2$S - weekday
-# %3$S - number
-# e.g. "the first monday of every 3 month"
-repeatDetailsRuleMonthly3=le %1$S %2$S tous les %3$S mois
-# LOCALIZATION NOTE (repeatDetailsRuleMonthly4):
+# %1$S - weekday
+# #2 - interval
+# i.e. "every MONDAY of every 3 months" 
+#  more specific: every monday of January, April, July, October
+monthlyEveryOfEvery=tous les mois chaque %1$S;chaque %1$S d'un mois sur #2
+
+# LOCALIZATION NOTE (monthlyDayOfNth):
 # Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
 # %1$S - day of month
-# e.g. "day 3 of every month"
-repeatDetailsRuleMonthly4=le %1$Se de chaque mois
-# LOCALIZATION NOTE (repeatDetailsRuleMonthly5):
+# #2 - month interval
+# e.g. "day 3 of every 2 months"
+monthlyDayOfNth=le %1$S de chaque mois;le %1$S un mois sur #2
+
+# LOCALIZATION NOTE (monthlyLastDayOfNth):
 # Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
 # %1$S - day of month
-# e.g. "day 3 of every other month"
-repeatDetailsRuleMonthly5=le %1$Se jour un mois sur deux
-# LOCALIZATION NOTE (repeatDetailsRuleMonthly6):
-# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
-# %1$S - day of month
-# %2$S - number
-# e.g. "day 3 of every 4 month"
-repeatDetailsRuleMonthly6=le %1$Se jour tous les %2$S mois
-repeatDetailsRuleMonthly7=le dernier jour du mois
-repeatDetailsRuleMonthly8=le dernier jour du mois un mois sur deux
-# LOCALIZATION NOTE (repeatDetailsRuleMonthly9):
-# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
-# %1$S - number
-# e.g. "the last day of every 4 month"
-repeatDetailsRuleMonthly9=le dernier jour du mois tous les %1$S mois
+# #2 - month interval
+# e.g. "the last day of every 3 months"
+monthlyLastDayOfNth=le dernier jour du mois;tous les #1 mois le dernier jours du mois
 
 repeatDetailsOrdinal1=premier
 repeatDetailsOrdinal2=deuxième
@@ -130,82 +100,61 @@ repeatDetailsOrdinal4=quatrième
 repeatDetailsOrdinal5=cinquième
 repeatDetailsOrdinal-1=dernier
 
-# LOCALIZATION NOTE (repeatDetailsRuleYearly1):
+# LOCALIZATION NOTE (yearlyNthOn):
 # Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
 # %1$S - month
 # %2$S - day of month
-# e.g. "every December 14"
-repeatDetailsRuleYearly1=chaque %2$S %1$S
-# LOCALIZATION NOTE (repeatDetailsRuleYearly2):
-# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
-# %1$S - month
-# %2$S - day of month
-# e.g. "every other year on December 14"
-repeatDetailsRuleYearly2=un an sur deux le %2$S %1$S
-# LOCALIZATION NOTE (repeatDetailsRuleYearly3):
-# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
-# %1$S - month
-# %2$S - day of month
-# %3$S - number
+# #3 - yearly interval
 # e.g. "every 3 years on December 14"
-repeatDetailsRuleYearly3=tous les %3$S ans le %2$S %1$S
-# LOCALIZATION NOTE (repeatDetailsRuleYearly4):
-# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
-# %1$S - ordinal
-# %2$S - weekday
-# %3$S - month
-# e.g "the second Monday of March"
-repeatDetailsRuleYearly4=le %1$S %2$S de %3$S
-# LOCALIZATION NOTE (repeatDetailsRuleYearly5):
-# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
-# %1$S - ordinal
-# %2$S - weekday
-# %3$S - month
-# e.g "every other year the second Monday of March"
-repeatDetailsRuleYearly5=un an sur deux le %1$S %2$S de %3$S
-# LOCALIZATION NOTE (repeatDetailsRuleYearly6):
-# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
-# %1$S - ordinal
-# %2$S - weekday
-# %3$S - month
-# %4$S - number
-# e.g "every 3 years the second Monday of March"
-repeatDetailsRuleYearly6=tous les %4$S ans le %1$S %2$S de %3$S
+yearlyNthOn=chaque année le %2$S %1$S;tous les #3 ans le %2$S %1$S
 
-repeatDetailsMonth1=Janvier
-repeatDetailsMonth2=Février
-repeatDetailsMonth3=Mars
-repeatDetailsMonth4=Avril
-repeatDetailsMonth5=Mai
-repeatDetailsMonth6=Juin
-repeatDetailsMonth7=Juillet
-repeatDetailsMonth8=Août
-repeatDetailsMonth9=Septembre
-repeatDetailsMonth10=Octobre
-repeatDetailsMonth11=Novembre
-repeatDetailsMonth12=Décembre
+# LOCALIZATION NOTE (yearlyNthOnNthOf):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# %1$S - ordinal
+# %2$S - weekday
+# %3$S - month
+# #4 - number
+# e.g. "the second Monday of every March"
+# e.g  "every 3 years the second Monday of March"
+yearlyNthOnNthOf=le %1$S %2$S du mois de %3$S;tous les #4 ans le %1$S %2$S du mois de %3$S
 
-# LOCALIZATION NOTE (repeatDetailsCount):
+# LOCALIZATION NOTE (yearlyNthOfNth):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# %1$S - weekday
+# %2$S - month
+# #4 - number
+# e.g. "every Thursday of March"
+# e.g  "every 3 years on every Thursday of March"
+yearlyEveryNthOfNth=tous les %1$S du mois de %2$S;tous les 3 ans chaque %1$S de %2$S
+
+# LOCALIZATION NOTE (repeatCount):
 # Edit recurrence window -> Recurrence details link on Event/Task dialog window
 # %1%$ - repeatDetailsRule...(see above). This is the first line of the link
 # %2%$ - event start date (e.g. mm/gg/yyyy)
-# %3$S - event occurence times: number
-# %4$S - event start time (e.g. hh:mm (PM/AM))
-# %5$S - event end time (e.g. hh:mm (PM/AM))
+# %3$S - event start time (e.g. hh:mm (PM/AM))
+# %4$S - event end time (e.g. hh:mm (PM/AM))
+# #5 - event occurence times: number
 # e.g. with repeatDetailsRuleMonthly3:
+# "Occurs the first Sunday of every 3 month
+#  only on 1/1/2009"
+#  from 5:00 PM to 6:00 PM"
 # "Occurs the first Sunday of every 3 month
 #  effective 1/1/2009 for 5 times
 #  from 5:00 PM to 6:00 PM"
-repeatDetailsCount=A lieu %1$S\nà partir du %2$S et %3$S fois\nde %4$S à %5$S.
-# LOCALIZATION NOTE (repeatDetailsCountAllDay):
+repeatCount=A lieu %1$S\nà partir du %2$S et #5 fois de suite\nde %3$S à %4$S.;A lieu %1$S\nà partir du %2$S et #5 fois de suite\nde %3$S à %4$S.
+
+# LOCALIZATION NOTE (repeatCountAllDay):
 # Edit recurrence window -> Recurrence details link on Event/Task dialog window
 # %1%$ - repeatDetailsRule...(see above). This is the first line of the link
 # %2%$ - event start date (e.g. mm/gg/yyyy)
-# %3$S - event occurence times: number
+# #3 - event occurence times: number
 # e.g. with repeatDetailsRuleMonthly3:
 # "Occurs the first Sunday of every 3 month
+#  only on 1/1/2009"
+# "Occurs the first Sunday of every 3 month
 #  effective 1/1/2009 for 5 times"
-repeatDetailsCountAllDay=A lieu %1$S\nà partir du %2$S et %3$S fois.
+repeatCountAllDay=A lieu %1$S\nà partir du %2$S et #3 fois.;A lieu %1$S\nà partir du %2$S et #3 fois.
+
 # LOCALIZATION NOTE (repeatDetailsUntil):
 # Edit recurrence window -> Recurrence details link on Event/Task dialog window
 # %1%$ - repeatDetailsRule...(see above). This is the first line of the link
@@ -246,6 +195,11 @@ repeatDetailsInfinite=A lieu %1$S\nà partir du %2$S\nde %3$S à %4$S.
 # "Occurs day 3 of every 5 month
 #  effective 1/1/2009"
 repeatDetailsInfiniteAllDay=A lieu %1$S\n à partir du %2$S.
+
+# LOCALIZATION NOTE (ruleTooComplex):
+# This string is shown in the reminder details area if our code can't handle the
+# complexity of the recurrence rule yet.
+ruleTooComplex=Cliquez pour plus de détails
 
 # LOCALIZATION NOTE (reminderCustomTitle):
 # Edit reminder window -> Reminder details link on Event/Task dialog window
