Warn when nsIDOMCSSStyleDeclaration::GetPropertyCSSValue is called. (Bug 474655)

--- a/fr/dom/chrome/layout/css.properties
+++ b/fr/dom/chrome/layout/css.properties
@@ -37,6 +37,8 @@
 MimeNotCss=La feuille de style %1$S n'a pas été chargée car son type MIME, « %2$S », n'est pas « text/css »
 MimeNotCssWarn=La feuille de style %1$S a été chargée comme CSS même si son type MIME, « %2$S », n'est pas « text/css »
 
+UseOfGetPropertyCSSValueWarning=L'utilisation de getPropertyCSSValue() est déconseillée. Pour mettre à jour votre code, utilisez plutôt getPropertyValue().
+
 PEUnexpEOF2=Fin de fichier inattendue durant la recherche de %1$S.
 PEParseRuleWSOnly=Chaîne composée uniquement d'espaces fournie comme règle.
 PEDeclDropped=Déclaration abandonnée.
