--- a/pl/calendar/chrome/calendar/calendar-event-dialog.properties
+++ b/pl/calendar/chrome/calendar/calendar-event-dialog.properties
@@ -37,174 +37,121 @@
 #
 # ***** END LICENSE BLOCK *****
 
-repeatDetailsRuleDaily1=Codziennie
-repeatDetailsRuleDaily2=Co drugi dzień
 # LOCALIZATION NOTE (repeatDetailsRuleDaily3):
 # Edit recurrence window -> Recurrence pattern -> Daily repeat rules
-# %1$S - number
+# #1 - number
 # e.g. "every 4 days"
-repeatDetailsRuleDaily3=Co %1$S dni
-repeatDetailsRuleDaily4=W dni powszednie
+repeatDetailsRuleDaily3=co %1$S dni
+dailyEveryNth=codziennie;co #1 dni;co #1 dni
+repeatDetailsRuleDaily4=w dni powszednie
 
-# LOCALIZATION NOTE (repeatDetailsRuleWeekly1):
+# LOCALIZATION NOTE (weeklyNthOn):
 # Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
 # %1$S - weekday (one or more)
-# e.g. "every Sunday and Monday"
-repeatDetailsRuleWeekly1=W %1$S
-# LOCALIZATION NOTE (repeatDetailsRuleWeekly2):
-# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
-# %1$S - weekday (one or more)
-# e.g. "every other week on Sunday, Monday and Friday"
-repeatDetailsRuleWeekly2=Co drugi tydzień w %1$S
-# LOCALIZATION NOTE (repeatDetailsRuleWeekly3):
-# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
-# %1$S - number
-# %2$S - weekday (one or more)
-# e.g. "every 3 weeks on Friday"
-repeatDetailsRuleWeekly3=Co %1$S tygodni w %2$S
-repeatDetailsRuleWeekly4=Co tydzień
-repeatDetailsRuleWeekly5=Co drugi tydzień
-# LOCALIZATION NOTE (repeatDetailsRuleWeekly6):
-# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
-# %1$S - number
-# e.g. "every 2 weeks"
-repeatDetailsRuleWeekly6=Co %1$S tygodni
+# #2 - week interval
+# e.g. "every 3 weeks on Tuesday, Wednesday and Thursday
+weeklyNthOn=w: %1$S;co #2 dzień tygodnia w: %1$S;co #2 dzień tygodnia w: %1$S
 
-repeatDetailsDay1=niedziela
-repeatDetailsDay2=poniedziałek
-repeatDetailsDay3=wtorek
-repeatDetailsDay4=środa
-repeatDetailsDay5=czwartek
-repeatDetailsDay6=piątek
-repeatDetailsDay7=sobota
+# LOCALIZATION NOTE (weeklyEveryNth):
+# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
+# #1 - interval
+# e.g. "every 5 weeks"
+weeklyEveryNth=co tydzień;co #1 tygodni;co #1 tygodni
+
+# LOCALIZATION NOTE (repeatDetailsAnd):
+# Used to show a number of weekdays in a list
+# i.e. "Sunday, Monday, Tuesday " + and + " Wednesday"
+# XXX Please file a bug if this makes it hard to localize the list.
 repeatDetailsAnd=i
-#FIXME
-# LOCALIZATION NOTE (repeatDetailsRuleMonthly):
+
+# LOCALIZATION NOTE (monthlyNthOfEvery):
 # Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
 # %1$S - ordinal
 # %2$S - weekday
-# e.g. "the first monday of every month"
-repeatDetailsRuleMonthly=%1$S %2$S każdego miesiąca
-# LOCALIZATION NOTE (repeatDetailsRuleMonthly2):
+# #3 - interval
+# i.e. "the FIRST MONDAY of every 3 months"
+monthlyNthOfEvery=%1$S %2$S każdego miesiąca;%1$S %2$S co #3 miesiące;%1$S %2$S co #3 miesięcy
+
+# LOCALIZATION NOTE (monthlyEveryOfEvery):
+
 # Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
-# %1$S - ordinal
-# %2$S - weekday
-# e.g. "the first monday of every other month"
-repeatDetailsRuleMonthly2=%1$S %2$S co 2 miesiące
-# LOCALIZATION NOTE (repeatDetailsRuleMonthly3):
+
+# %1$S - weekday
+# #2 - interval
+# i.e. "every MONDAY of every 3 months" 
+#  more specific: every monday of January, April, July, October
+monthlyEveryOfEvery=w: %1$S ;w: %1$S co #2 miesiące;w: %1$S co #2 miesięcy
+
+# LOCALIZATION NOTE (monthlyDayOfNth):
 # Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
-# %1$S - ordinal
-# %2$S - weekday
-# %3$S - number
-# e.g. "the first monday of every 3 month"
-repeatDetailsRuleMonthly3=%1$S %2$S co %3$S miesięcy
-# LOCALIZATION NOTE (repeatDetailsRuleMonthly4):
-# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
-# %1$S - day of month
-# e.g. "day 3 of every month"
-repeatDetailsRuleMonthly4=%1$S dnia każdego miesiąca
-# LOCALIZATION NOTE (repeatDetailsRuleMonthly5):
-# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
-# %1$S - day of month
-# e.g. "day 3 of every other month"
-repeatDetailsRuleMonthly5=%1$S dnia co 2 miesiące
-# LOCALIZATION NOTE (repeatDetailsRuleMonthly6):
+# #2 - month interval
+# e.g. "day 3 of every 2 months"
+monthlyDayOfNth=każdego %1$S dnia miesiąca;każdego %1$S dnia co #2 miesiąca;każdego %1$S dnia co #2 miesięcy
+
+# LOCALIZATION NOTE (monthlyLastDayOfNth):
 # Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
 # %1$S - day of month
-# %2$S - number
-# e.g. "day 3 of every 4 month"
-repeatDetailsRuleMonthly6=%1$S dnia co %2$S miesięcy
-repeatDetailsRuleMonthly7=ostatniego dnia miesiąca
-repeatDetailsRuleMonthly8=ostatniego dnia co 2 miesiące
-# LOCALIZATION NOTE (repeatDetailsRuleMonthly9):
-# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
-# %1$S - number
-# e.g. "the last day of every 4 month"
-repeatDetailsRuleMonthly9=ostatniego dnia co %1$S miesięcy
+# #2 - month interval
+# e.g. "the last day of every 3 months"
+monthlyLastDayOfNth=ostatniego dnia miesiąca;ostatniego dnia miesiąca co #1 miesiące;ostatniego dnia miesiąca co #1 miesięcy
 
 repeatDetailsOrdinal1=1.
 repeatDetailsOrdinal2=2.
 repeatDetailsOrdinal3=3.
 repeatDetailsOrdinal4=4.
 repeatDetailsOrdinal5=5.
-repeatDetailsOrdinal-1=Ostatni(a)
+repeatDetailsOrdinal-1=ostatni(a)
 
-# LOCALIZATION NOTE (repeatDetailsRuleYearly1):
+# LOCALIZATION NOTE (yearlyNthOn):
 # Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
 # %1$S - month
 # %2$S - day of month
-# e.g. "every December 14"
-repeatDetailsRuleYearly1=%2$S %1$S
-# LOCALIZATION NOTE (repeatDetailsRuleYearly2):
-# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
-# %1$S - month
-# %2$S - day of month
-# e.g. "every other year on December 14"
-repeatDetailsRuleYearly2=%2$S %1$S co 2 lata
-# LOCALIZATION NOTE (repeatDetailsRuleYearly3):
-# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
-# %1$S - month
-# %2$S - day of month
-# %3$S - number
+# #3 - yearly interval
 # e.g. "every 3 years on December 14"
-repeatDetailsRuleYearly3=%2$S %1$S co %3$S lat(a)
-# LOCALIZATION NOTE (repeatDetailsRuleYearly4):
-# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
-# %1$S - ordinal
-# %2$S - weekday
-# %3$S - month
-# e.g "the second Monday of March"
-repeatDetailsRuleYearly4=%1$S %2$S %3$S
-# LOCALIZATION NOTE (repeatDetailsRuleYearly5):
-# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
-# %1$S - ordinal
-# %2$S - weekday
-# %3$S - month
-# e.g "every other year the second Monday of March"
-repeatDetailsRuleYearly5=%1$S %2$S %3$S co 2 lata
-# LOCALIZATION NOTE (repeatDetailsRuleYearly6):
-# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
-# %1$S - ordinal
-# %2$S - weekday
-# %3$S - month
-# %4$S - number
-# e.g "every 3 years the second Monday of March"
-repeatDetailsRuleYearly6=%1$S %2$S %3$S co %4$S lat(a)
+yearlyNthOn=co %1$S %2$S;co #3 lata %1$S %2$S;co #3 lata %1$S %2$S
 
-repeatDetailsMonth1=stycznia
-repeatDetailsMonth2=lutego
-repeatDetailsMonth3=marca
-repeatDetailsMonth4=kwietnia
-repeatDetailsMonth5=maja
-repeatDetailsMonth6=czerwca
-repeatDetailsMonth7=lipca
-repeatDetailsMonth8=sierpnia
-repeatDetailsMonth9=września
-repeatDetailsMonth10=października
-repeatDetailsMonth11=listopada
-repeatDetailsMonth12=grudnia
+# LOCALIZATION NOTE (yearlyNthOnNthOf):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# %1$S - ordinal
+# %2$S - weekday
+# %3$S - month
+# #4 - number
+# e.g. "the second Monday of every March"
+# e.g  "every 3 years the second Monday of March"
+yearlyNthOnNthOf=co %1$S %2$S każdego %3$S;co #4 lata %1$S %2$S %3$S;co #4 lat %1$S %2$S %3$S
 
-# LOCALIZATION NOTE (repeatDetailsCount):
+# LOCALIZATION NOTE (yearlyNthOfNth):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# %1$S - weekday
+# %2$S - month
+# #4 - number
+# e.g. "every Thursday of March"
+# e.g  "every 3 years on every Thursday of March"
+yearlyEveryNthOfNth=w każdy %1$S %2$S;co #4 lata %1$S %2$S;co #4 lat %1$S %2$S
+
+# LOCALIZATION NOTE (repeatCount):
 # Edit recurrence window -> Recurrence details link on Event/Task dialog window
 # %1%$ - repeatDetailsRule...(see above). This is the first line of the link
 # %2%$ - event start date (e.g. mm/gg/yyyy)
-# %3$S - event occurence times: number
-# %4$S - event start time (e.g. hh:mm (PM/AM))
-# %5$S - event end time (e.g. hh:mm (PM/AM))
+# %3$S - event start time (e.g. hh:mm (PM/AM))
+# %4$S - event end time (e.g. hh:mm (PM/AM))
+# #5 - event occurence times: number
 # e.g. with repeatDetailsRuleMonthly3:
 # "Occurs the first Sunday of every 3 month
-#  effective 1/1/2009 for 5 times
+#  only on 1/1/2009"
 #  from 5:00 PM to 6:00 PM"
-repeatDetailsCount=%1$S\npocząwszy od %2$S, powtarzaj %3$S razy\nw godz. od %4$S do %5$S.
-# LOCALIZATION NOTE (repeatDetailsCountAllDay):
+repeatCount=%1$S\npocząwszy od %2$S, powtarzaj #5 raz\nw godz. od %3$S do %4$S.;%1$S\npocząwszy od %2$S, powtarzaj #5 razy\nw godz. od %3$S do %4$S.;%1$S\npocząwszy od %2$S, powtarzaj #5 razy\nw godz. od %3$S do %4$S.
+# LOCALIZATION NOTE (repeatCountAllDay):
 # Edit recurrence window -> Recurrence details link on Event/Task dialog window
 # %1%$ - repeatDetailsRule...(see above). This is the first line of the link
 # %2%$ - event start date (e.g. mm/gg/yyyy)
-# %3$S - event occurence times: number
+# #3 - event occurence times: number
 # e.g. with repeatDetailsRuleMonthly3:
+# "Occurs the first Sunday of every 3 month
+#  only on 1/1/2009"
 # "Occurs the first Sunday of every 3 month
 #  effective 1/1/2009 for 5 times"
-repeatDetailsCountAllDay=%1$S\npocząwszy od %2$S, powtarzaj %3$S razy.
+repeatCountAllDay=%1$S\npocząwszy od %2$S, powtarzaj #3 raz.;%1$S\npocząwszy od %2$S, powtarzaj #3 razy.;%1$S\npocząwszy od %2$S, powtarzaj #3 razy.
 # LOCALIZATION NOTE (repeatDetailsUntil):
 # Edit recurrence window -> Recurrence details link on Event/Task dialog window
 # %1%$ - repeatDetailsRule...(see above). This is the first line of the link
@@ -245,6 +192,11 @@ repeatDetailsInfinite=%1$S\npocząwszy od %2$S\nw godz. od %3$S do %4$S.
 # "Occurs day 3 of every 5 month
 #  effective 1/1/2009"
 repeatDetailsInfiniteAllDay=%1$S\npocząwszy od %2$S.
+
+# LOCALIZATION NOTE (ruleTooComplex):
+# This string is shown in the reminder details area if our code can't handle the
+# complexity of the recurrence rule yet.
+ruleTooComplex=Kliknij tutaj, by zobaczyć szczegóły
 
 # LOCALIZATION NOTE (reminderCustomTitle):
 # Edit reminder window -> Reminder details link on Event/Task dialog window
