L10n for Warn when nsIDOMCSSStyleDeclaration::GetPropertyCSSValue is called. (Bug 474655)

--- a/pl/dom/chrome/layout/css.properties
+++ b/pl/dom/chrome/layout/css.properties
@@ -38,6 +38,8 @@
 MimeNotCss=Arkusz stylów %1$S nie został wczytany, ponieważ zawarta deklaracja typu MIME tego arkusza: "%2$S" nie jest zgodna z typem "text/css".
 MimeNotCssWarn=Arkusz stylów %1$S został wczytany jako poprawny CSS pomimo tego, że deklaracja typu MIME tego arkusza: "%2$S" nie jest zgodna z typem "text/css".
 
+UseOfGetPropertyCSSValueWarning=Stosowanie getPropertyCSSValue() jest przestarzałe. Zamiast tego należy stosować getPropertyValue().
+
 PEUnexpEOF2=Niespodziewany koniec pliku podczas poszukiwania %1$S.
 PEParseRuleWSOnly=Do przetwarzania przekazano ciąg składający się wyłącznie ze znaków odstępu.
 PEDeclDropped=Deklaracja opuszczona.
@@ -121,7 +123,6 @@ PEDeclEndEOF=";" lub "}" by zakończyć deklarację
 PEParseDeclarationNoColon=Oczekiwano ":", ale odnaleziono "%1$S".
 PEParseDeclarationDeclExpected=Oczekiwano deklaracji, ale odnaleziono '%1$S'.
 PEEndOfDeclEOF=koniec deklaracji
-# FIXME: translate 'important' to 'ważne' or is it a CSS value?
 PEImportantEOF=important
 PEExpectedImportant=Oczekiwano "important" ale odnaleziono "%1$S".
 PEBadDeclEnd=Oczekiwano ";" by dokończyć deklarację, ale odnaleziono "%1$S".
