installer fixes, spellcheck

--- a/uk/mail/installer/mui.properties
+++ b/uk/mail/installer/mui.properties
@@ -72,7 +72,7 @@ MUI_TEXT_ABORT_TITLE=Встановлення перервано.
 MUI_TEXT_ABORT_SUBTITLE=Встановлення не завершене.
 MUI_BUTTONTEXT_FINISH=&Гаразд
 MUI_TEXT_FINISH_INFO_TITLE=Майстер встановлення $(^NameDA) завершує роботу
-MUI_TEXT_FINISH_INFO_TEXT=Встановлення $(^NameDA) виконане.\n\nНатисніть кнопку «Гаразд» для виходу з програми встановлення.
+MUI_TEXT_FINISH_INFO_TEXT=Встановлення $(^NameDA) завершено.\n\nНатисніть кнопку «Гаразд» для виходу з програми встановлення.
 MUI_TEXT_FINISH_INFO_REBOOT=Для завершення програми встановлення $(^NameDA) необхідно перезавантажити комп’ютер. Хочете зробити це зараз?
 MUI_TEXT_FINISH_REBOOTNOW=Так, перезавантажити ПК зараз
 MUI_TEXT_FINISH_REBOOTLATER=Ні, я перезавантажу ПК пізніше
