add confirmation when deleting saved search, 468081

--- a/fr/mail/chrome/messenger/messenger.properties
+++ b/fr/mail/chrome/messenger/messenger.properties
@@ -360,6 +360,7 @@ confirmViewDeleteTitle=Confirmation
 confirmViewDeleteMessage=Voulez-vous vraiment effacer cette vue ?
 
 # for virtual folders
+confirmSavedSearchTitle=Confirmation de la suppression
 confirmSavedSearchDeleteMessage=Voulez-vous vraiment effacer ce dossier virtuel ?
 
 ## @name ENTER_PASSWORD_PROMPT
