--- a/cs/browser/chrome/browser/browser.properties
+++ b/cs/browser/chrome/browser/browser.properties
@@ -5,6 +5,7 @@ openFile=Otevřít soubor
 
 droponbookmarksbutton=Pro vytvoření záložky přetáhněte odkaz
 dropondownloadsbutton=Pro stažení souboru přetáhněte soubor nebo odkaz
+droponnewtabbutton=Pro otevření v nového panelu přetáhněte soubor nebo odkaz
 droponnewwindowbutton=Pro otevření v novém okně přetáhněte soubor nebo odkaz
 droponhomebutton=Pro nastavení domovské stránky přetáhněte soubor nebo odkaz
 droponhometitle=Nastavení domovské stránky
