--- a/cs/calendar/updater/updater.ini
+++ b/cs/calendar/updater/updater.ini
@@ -1,4 +1,4 @@
 ; This file is in the UTF-8 encoding
 [Strings]
 Title=Aktualizace softwaru
-Info=Sunbird instaluje aktualizace. Prosím počkejte... 
+InfoText=%MOZ_APP_DISPLAYNAME% instaluje aktualizace a za chvíli se spustí…
