--- a/cs/dom/chrome/layout/css.properties
+++ b/cs/dom/chrome/layout/css.properties
@@ -37,6 +37,8 @@
 MimeNotCss=Soubor s kaskádovými styly %1$S nebyl použit, protože má typ MIME "%2$S" místo "text/css".
 MimeNotCssWarn=Soubor s kaskádovými styly %1$S byl použit, i když má typ MIME "%2$S" místo "text/css".
 
+UseOfGetPropertyCSSValueWarning=Použití getPropertyCSSValue() není doporučováno. Aktualizujte svůj kód a používejte getPropertyValue().
+
 PEUnexpEOF2=Neočekávaný konec souboru při hledání %1$S.
 PEParseRuleWSOnly=Řetězec složený z 'bílých znaků' je předán k parsování jako pravidlo.
 PEDeclDropped=Deklarace vynechána.
