Update nb-NO mail l10n

--- a/nb-NO/mail/chrome/messenger/messenger.properties
+++ b/nb-NO/mail/chrome/messenger/messenger.properties
@@ -85,7 +85,8 @@ compactingFolder=Komprimerer mappen %S …
 doneCompacting=Komprimering fullført
 autoCompactAllFoldersTitle=Komprimere mapper
 autoCompactAllFolders=Vil du komprimere alle lokale of frakoblede mapper for å spare diskplass?
-autoCompactAllFoldersCheckbox=Gjør dette automatisk fra nå av.
+autoCompactAlwaysAskCheckbox=Alltid spør før mapper automatisk komprimeres
+compactNowButton=Komprimer &nå
 
 confirmFolderDeletionForFilter=Sletting av mappen «%S» vil slå av filtrene som er tilknyttet. Er du sikker på at du vil slette mappen?
 alertFilterChanged=Filtre tilknyttet mappen vil bli oppdatert.
@@ -169,6 +170,8 @@ draftsFolderName=Utkast
 templatesFolderName=Maler
 outboxFolderName=Utboks
 junkFolderName=Uønsket
+archivesFolderName=Arkiv
+
 
 # Error message for special folder deletion on imap accounts
 # LOCALIZATION NOTE (specialFolderDeletionErr): Do not translate "IMAP" in the line below
@@ -360,6 +363,7 @@ confirmViewDeleteTitle=Bekreft
 confirmViewDeleteMessage=Er du sikker på at du vil slette denne visningen?
 
 # for virtual folders
+confirmSavedSearchTitle=Bekreft sletting
 confirmSavedSearchDeleteMessage=Er du sikker på at du vil slette dette lagrede søket?
 
 ## @name ENTER_PASSWORD_PROMPT
