--- a/nb-NO/mail/chrome/messenger/news.properties
+++ b/nb-NO/mail/chrome/messenger/news.properties
@@ -47,6 +47,8 @@ cancelDisallowed=Denne meldingen ser ikke ut til å være fra deg. Du kan bare a
 cancelConfirm=Er du sikker på at du vil slette denne meldingen?
 messageCancelled=Melding slettet.
 enterUsername=Skriv inn et brukernavn for tilgang til nyhetsgruppetjeneren\:
+enterUsernameTitle=Brukernavn for nyhetsgruppetjenesten er påkrevd
+saveUsername=Bruk passordbehandleren for å huske denne verdien.
 enterPassword=Skriv inn et passord for tilgang til nyhetsgruppetjeneren\:
 enterPasswordTitle=Nyhetsgruppetjeneren krever passord
 okButtonText=Last ned
@@ -71,7 +73,7 @@ autoSubscribeText=Vil du melde deg inn i %1$S?
 # Error - server error
 ## @name NNTP_ERROR_MESSAGE
 ## @loc None
--304=En nyhetsgruppefeil oppstod\:
+-304=En nyhetsgruppefeil oppstod:
 
 # Error - newsgroup scan error
 ## @name NNTP_NEWSGROUP_SCAN_ERROR
