--- a/nb-NO/mail/updater/updater.ini
+++ b/nb-NO/mail/updater/updater.ini
@@ -1,4 +1,4 @@
 ; This file is in the UTF-8 encoding
 [Strings]
 Title=Programvareoppdatering
-Info=Thunderbird installerer nå oppdateringer, og vil starte igjen straks ...
+InfoText=%MOZ_APP_DISPLAYNAME% installerer nå oppdateringer, og vil starte igjen straks …
