Bug 350314: STARTTLS is called TLS in user preferences (remaining IMAP/POP3 case).

--- a/fr/suite/chrome/mailnews/messenger.properties
+++ b/fr/suite/chrome/mailnews/messenger.properties
@@ -127,10 +127,10 @@ messageCollapsed=Réduit
 
 # Used in the SMTP Account Settings panel when a server value has no properties
 smtpServerList-NotSpecified=<non spécifié>
-smtpServer-SecureConnection-Type_0=Aucun
-smtpServer-SecureConnection-Type_1=STARTTLS si disponible
-smtpServer-SecureConnection-Type_2=STARTTLS
-smtpServer-SecureConnection-Type_3=SMTP sur SSL
+smtpServer-ConnectionSecurityType-0=Aucune
+smtpServer-ConnectionSecurityType-1=STARTTLS, si disponible
+smtpServer-ConnectionSecurityType-2=STARTTLS
+smtpServer-ConnectionSecurityType-3=SSL/TLS
 smtpServer-SecureAuthentication-Type-false=Non
 smtpServer-SecureAuthentication-Type-true=Oui
 smtpServers-confirmServerDeletionTitle=Supprimer le serveur
