l10n for bug 350314 - STARTTLS is called TLS in user preferences (remaining IMAP/POP3 case)

--- a/pl/mail/chrome/messenger/messenger.properties
+++ b/pl/mail/chrome/messenger/messenger.properties
@@ -117,10 +117,10 @@ messageCollapsed     = Zwinięty
 
 # Used in the SMTP Account Settings panel when a server value has no properties
 smtpServerList-NotSpecified                = <brak>
-smtpServer-SecureConnection-Type_0         = Brak
-smtpServer-SecureConnection-Type_1         = STARTTLS (jeśli dostępne)
-smtpServer-SecureConnection-Type_2         = STARTTLS
-smtpServer-SecureConnection-Type_3         = SMTP poprzez SSL
+smtpServer-ConnectionSecurityType-0        = Bez szyfrowania
+smtpServer-ConnectionSecurityType-1        = STARTTLS, jeśli dostępne
+smtpServer-ConnectionSecurityType-2        = STARTTLS
+smtpServer-ConnectionSecurityType-3        = SSL/TLS
 smtpServer-SecureAuthentication-Type-false = Nie
 smtpServer-SecureAuthentication-Type-true  = Tak
 smtpServers-confirmServerDeletionTitle     = Usuń serwer
